<resources>
    <string name="app_name" translatable="false">Daily Events</string>
    <string name="app_font" translatable="false">monospace</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="proceed">Proceed</string>
    <string name="signIn">Sign in</string>
    <string name="forgotten_password">Forgot password?</string>
    <string name="create_new_account">New user? Click here!</string>
    <string name="resend_confirmation_email">Resend email</string>
    <string name="signUp">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="existing_account">Already have an account? Click here!</string>
    <string name="account">Account</string>
    <string name="change">Change</string>
    <string name="name">Name:</string>
    <string name="email_address2">Email address:</string>
    <string name="new_email_address">New email address</string>
    <string name="password2">Password:</string>
    <string name="signOut">Sign out</string>
    <string name="delete">Delete</string>
    <string name="fragment_title1">Last week</string>
    <string name="fragment_title2">This week</string>
    <string name="fragment_title3">Next week</string>
    <string name="fragment_title4">Other events</string>
    <string name="fragment_title5">Events</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="information">Information</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="new_information">New information</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_account">Delete account</string>
    <string name="other_settings">Other settings</string>
    <string name="confirmation">Confirmation</string>
    <string name="delete_account_message">* If you wish to proceed type in the word \"deletion\" for confirmation. All information about your account will then be deleted.</string>
    <string name="send">Send</string>
    <string name="reset_password_message">* An email will be sent to you to set a new password.</string>
    <string name="change_email">Change email</string>
    <string name="change_name">Change name</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="empty_field_error_message">Field cannot be empty!</string>
    <string name="max_info_length_error_message">The information is limited to %1$d characters!</string>
    <string name="confirmation_word">deletion</string>
    <string name="wrong_confirmation_word_error_message">Wrong confirmation word!</string>
    <string name="max_name_length_error_message">The name is limited to %1$d characters!</string>
    <string name="min_password_length_error_message">You must enter at least %1$d characters!</string>
    <string name="email_address_not_confirmed">Email address not confirmed.</string>
    <string name="wrong_email_address_or_password">Incorrect credentials!</string>
    <string name="email_address_in_use">The email address is linked to another account!</string>
    <string name="account_active_on_another_device">The account is active on another device. Please use that device or simply sign in again.</string>
    <string name="change_password_warning_message">If it wasn\'t you who signed in to the account on another device, please change your password immediately.</string>
    <string name="confirmation_email_sent_to">A confirmation email was sent to</string>
    <string name="confirmation_email_sent_to_error">A problem occurred while sending a confirmation email to</string>
    <string name="try_again_later">Please try again later.</string>
    <string name="account_created_successfully">Account created successfully!</string>
    <string name="account_not_created_successfully">A problem occurred while creating account!</string>
    <string name="invalid_date">Invalid date!</string>
    <string name="account_deleted_successfully">Account deleted successfully!</string>
    <string name="account_not_deleted_successfully">A problem occurred while deleting account!</string>
    <string name="email_sent_successfully">Email sent successfully!</string>
    <string name="email_not_sent_successfully">A problem occurred while sending email!</string>
    <string name="email_address_changed_successfully">Email address changed successfully!</string>
    <string name="email_address_not_changed_successfully">A problem occurred while changing email address!</string>
    <string name="name_changed_successfully">Name changed successfully!</string>
    <string name="name_not_changed_successfully">A problem occurred while changing name!</string>
    <string name="password_changed_successfully">Password changed successfully!</string>
    <string name="password_not_changed_successfully">A problem occurred while changing password!</string>
    <string name="select_country_info_message">Please select a country.</string>
    <string name="select_country">Select a country</string>
    <string name="countries">Countries</string>
    <string name="search">Search</string>
    <string name="no_internet">No internet connection!</string>
    <string name="problem_with_server">A problem occurred with the server!</string>
    <string name="country_changed_successfully">Country changed successfully!</string>
    <string name="country_not_changed_successfully">A problem occurred while changing country!</string>
    <string name="chosen_country_will_soon_be_updated">Information for the country you have chosen will soon be updated so you are unable to change to it.</string>
    <string name="info_will_soon_be_updated">Your information will soon be updated so you are unable to change your country.</string>
    <string name="connection_lost_while_signing_in_error_message1">You cannot access the settings page because your internet connection was lost during the last time you were signing in!</string>
    <string name="connection_lost_while_signing_in_error_message2">Your internet connection was lost during the last time you were signing in!</string>
    <string name="connection_lost_while_signing_in_info_message1">If you haven\'t already, please establish a stable connection and wait until you are signed out automatically to fix any problems with the files that may have occurred.</string>
    <string name="connection_lost_while_signing_in_info_message2">If it takes more than 2 minutes to sign out automatically, you can try to manually close and reopen the app.</string>
    <string name="connection_lost_while_signing_in_info_message3">You can press the settings button to see all messages again.</string>
    <string name="connection_lost_while_signing_up_error">Your internet connection was lost during the sign up process!</string>
    <string name="connection_lost_while_signing_up_info_message1">This account will now be automatically deleted to fix any problems that may have occurred.</string>
    <string name="connection_lost_while_signing_up_info_message2">If you haven\'t already, please establish a stable connection and then try to recreate it.</string>
    <string name="notification_channel_name">Notifications</string>
    <string name="notification_channel_description">This is the channel that is used to send notifications for all saved events!</string>
    <string name="time_format">Time format:</string>
    <string name="date_format">Date format:</string>
    <string name="notifications1">Notifications:</string>
    <string name="on_time">On time</string>
    <string name="early_5_mins">5 mins. earlier</string>
    <string name="early_10_mins">10 mins. earlier</string>
    <string name="early_15_mins">15 mins. earlier</string>
    <string name="early_30_mins">30 mins. earlier</string>
    <string name="early_1_hr">1 hr. earlier</string>
    <string name="early_2_hrs">2 hrs. earlier</string>
    <string name="early_3_hrs">3 hrs. earlier</string>
    <string name="early_6_hrs">6 hrs. earlier</string>
    <string name="early_12_hrs">12 hrs. earlier</string>
    <string name="early_24_hrs">24 hrs. earlier</string>
    <string name="off">Off</string>
    <string name="auto_time_turned_off">Automatic date and time is currently turned off</string>
    <string name="turn_on">Turn on</string>
    <string name="auto_time_message">* Please turn on this setting! Otherwise the app will not work correctly.</string>
</resources>