<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_dialog"
    android:outlineProvider="background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@fraction/aatd_guideline1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@fraction/aatd_guideline2" />

    <com.scwang.wave.MultiWaveHeader
        android:id="@+id/waveHeader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mwhCloseColor="@android:color/black"
        app:mwhColorAlpha="0.6"
        app:mwhIsRunning="false"
        app:mwhStartColor="@color/colorPrimary"
        app:mwhVelocity="0.9"
        app:mwhWaveHeight="@dimen/wave_height" />

    <TextView
        android:id="@+id/title_TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:shadowColor="@android:color/black"
        android:shadowDx="@dimen/large_text_shadowDx"
        android:shadowDy="@dimen/large_text_shadowDy"
        android:shadowRadius="@dimen/large_text_shadowRadius"
        android:text="@string/auto_time_turned_off"
        android:textAlignment="center"
        android:textColor="@color/colorTextWhite"
        android:textSize="@dimen/aatd_title_text_size"
        android:textStyle="bold|italic"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="@fraction/aatd_title_v_bias" />

    <Button
        android:id="@+id/turnOn_Button"
        android:layout_width="@dimen/buttons_width"
        android:layout_height="@dimen/buttons_height"
        android:background="@drawable/round_button"
        android:fontFamily="monospace"
        android:text="@string/turn_on"
        android:textAlignment="center"
        android:textColor="@color/colorTextWhite"
        android:textSize="@dimen/buttons_text_size"
        android:textStyle="bold|italic"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        app:layout_constraintVertical_bias="@fraction/aatd_turn_on_button_v_bias"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/aatd_message_s_margin"
        android:layout_marginEnd="@dimen/aatd_message_e_margin"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/auto_time_message"
        android:textAlignment="center"
        android:textSize="@dimen/aatd_message_text_size"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>